--- a/main/templates/base/base.html
+++ b/main/templates/base/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,17 +6,29 @@
     <meta name="description" content="description"/>
     <meta name="author" content="author" />
     <meta name="keywords" content="keywords" />
-    <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
+    <link rel="stylesheet" href="{% static 'styles.css' %}" type="text/css" />
   </head>
   <body>
-    <form method='POST'> {% csrf_token %}
-      <input type='text' placeholder='Enter city' name='city' />
-      <button type='submit'>Enter</button>
-    </form>
-    <h1>{{description}}</h1>
-    <h1>{{temp}}</h1>
-    <h1>{{day}}</h1>
-    <h1>{{city}}</h1>
-    <img src='https://openweathermap.org/img/w/{{icon}}.png' width='50px'/>
+    <div class="container">
+      <form method='POST'> {% csrf_token %}
+        <input type="text" name="city" placeholder="Enter City">
+        <button type="submit" class="btn">Enter</button>
+      </form>
+      <div class="weather">
+        <div class="left">
+          <h2>{{temp}} &deg;</h2>
+          <h3>{{city}}</h3>
+        </div>
+        <div class="right">
+          <div class="icon">
+            <p><img src='https://openweathermap.org/img/w/{{icon}}.png' width='50px'></p>
+          </div>
+          <div class="condition">
+            <p>{{description}}</p>
+            <p>{{date}}</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
